[gd_scene load_steps=28 format=3 uid="uid://i0i10lo3yj1k"]

[ext_resource type="Texture2D" uid="uid://c7mpobee22vr0" path="res://assets/brackeys_platformer_assets/Background.png" id="1_rxjlm"]
[ext_resource type="PackedScene" uid="uid://uckndpki27j8" path="res://scenes/items/coin.tscn" id="2_0esc1"]
[ext_resource type="Texture2D" uid="uid://cuj62vc30hum0" path="res://assets/brackeys_platformer_assets/brackeys_platformer_assets/sprites/slime_green.png" id="3_3xx1f"]
[ext_resource type="Texture2D" uid="uid://m2b80f572own" path="res://assets/Kings and Pigs Sprites/12-Live and Coins/Big Diamond Idle (18x14).png" id="4_3xx1f"]
[ext_resource type="Script" uid="uid://dbvvbglypag0w" path="res://scripts/ui/result_scene.gd" id="ResultSceneScript"]

[sub_resource type="LabelSettings" id="LabelSettings_wa4ka"]
font_size = 32

[sub_resource type="AtlasTexture" id="AtlasTexture_wy3vl"]
atlas = ExtResource("4_3xx1f")
region = Rect2(0, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebm02"]
atlas = ExtResource("4_3xx1f")
region = Rect2(18, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4kgq"]
atlas = ExtResource("4_3xx1f")
region = Rect2(36, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_l54d2"]
atlas = ExtResource("4_3xx1f")
region = Rect2(54, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o6eg"]
atlas = ExtResource("4_3xx1f")
region = Rect2(72, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu3mx"]
atlas = ExtResource("4_3xx1f")
region = Rect2(90, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6fy0"]
atlas = ExtResource("4_3xx1f")
region = Rect2(108, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_i08i5"]
atlas = ExtResource("4_3xx1f")
region = Rect2(126, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tp81"]
atlas = ExtResource("4_3xx1f")
region = Rect2(144, 0, 18, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaedl"]
atlas = ExtResource("4_3xx1f")
region = Rect2(162, 0, 18, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_wa4ka"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy3vl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebm02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4kgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l54d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o6eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu3mx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6fy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i08i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tp81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaedl")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_p8al1"]
atlas = ExtResource("3_3xx1f")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk783"]
atlas = ExtResource("3_3xx1f")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8egaj"]
atlas = ExtResource("3_3xx1f")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s85si"]
atlas = ExtResource("3_3xx1f")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3j4s"]
atlas = ExtResource("3_3xx1f")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6we72"]
atlas = ExtResource("3_3xx1f")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjm25"]
atlas = ExtResource("3_3xx1f")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3k5r"]
atlas = ExtResource("3_3xx1f")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ni4a"]
atlas = ExtResource("3_3xx1f")
region = Rect2(24, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_8axrq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8al1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk783")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8egaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s85si")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3j4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6we72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjm25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3k5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ni4a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="ResultScene" type="Node2D"]
script = ExtResource("ResultSceneScript")

[node name="Bg" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(240.5, 135.5)
scale = Vector2(1.8333334, 1.5722222)
texture = ExtResource("1_rxjlm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ResultTitle" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 60.0
offset_top = 37.0
offset_right = 418.0
offset_bottom = 82.0
text = "This Round Result"
label_settings = SubResource("LabelSettings_wa4ka")
horizontal_alignment = 1

[node name="CoinNumber" type="Label" parent="CanvasLayer/Control/ResultTitle"]
layout_mode = 0
offset_left = 190.0
offset_top = 74.0
offset_right = 297.0
offset_bottom = 97.0
text = "XX"

[node name="EnemyKilled" type="Label" parent="CanvasLayer/Control/ResultTitle"]
layout_mode = 0
offset_left = 190.0
offset_top = 101.0
offset_right = 297.0
offset_bottom = 124.0
text = "XX"

[node name="DiamondNumber" type="Label" parent="CanvasLayer/Control/ResultTitle"]
layout_mode = 0
offset_left = 190.0
offset_top = 132.0
offset_right = 297.0
offset_bottom = 155.0
text = "XX"

[node name="ReturnButton" type="Button" parent="CanvasLayer"]
offset_left = 184.0
offset_top = 208.0
offset_right = 303.0
offset_bottom = 239.0
text = "Return to Title"

[node name="coin" parent="CanvasLayer" instance=ExtResource("2_0esc1")]
position = Vector2(216, 122)

[node name="AnimatedSpriteDiamond" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(214, 182)
sprite_frames = SubResource("SpriteFrames_wa4ka")
autoplay = "default"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(216, 146)
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_8axrq")
autoplay = "default"
