extends Node2D

## ============================================================================
## ç»“æœç»“ç®—åœºæ™¯ - ResultScene
## ============================================================================
## åŠŸèƒ½ï¼šæ˜¾ç¤ºç©å®¶æœ¬è½®æ¸¸æˆçš„ç»Ÿè®¡æ•°æ®
## ä½œè€…ï¼šè‡ªåŠ¨ç”Ÿæˆ
## ç‰ˆæœ¬ï¼š1.0
##
## ä½¿ç”¨æ–¹æ³•ï¼š
## 1. åœºæ™¯åŠ è½½æ—¶è‡ªåŠ¨æ˜¾ç¤ºæœ¬è½®ç»Ÿè®¡
## 2. ç‚¹å‡» Return to Title è¿”å›ä¸»ç•Œé¢
## ============================================================================


## ============================================================================
## èŠ‚ç‚¹å¼•ç”¨
## ============================================================================

@onready var coin_number: Label = $CanvasLayer/Control/ResultTitle/CoinNumber
@onready var enemy_killed: Label = $CanvasLayer/Control/ResultTitle/EnemyKilled
@onready var return_button: Button = $CanvasLayer/ReturnButton


## ============================================================================
## åˆå§‹åŒ–
## ============================================================================

func _ready() -> void:
    # æ˜¾ç¤ºæœ¬è½®é‡‘å¸æ•°
    coin_number.text = str(GlobalData.session_coins_collected)

    # æ˜¾ç¤ºæœ¬è½®æ•Œäººæ•°
    var total_enemies = GlobalData.get_session_total_enemies()
    enemy_killed.text = str(total_enemies)

    print("ğŸ“Š æœ¬è½®ç»“æœ - é‡‘å¸: %d, æ•Œäºº: %d" % [
        GlobalData.session_coins_collected, total_enemies
    ])

    # è¿æ¥è¿”å›æŒ‰é’®
    if return_button:
        return_button.pressed.connect(_on_return_pressed)


## ============================================================================
## äº‹ä»¶å¤„ç†
## ============================================================================

## è¿”å›æŒ‰é’®ç‚¹å‡»äº‹ä»¶
func _on_return_pressed() -> void:
    print("ğŸ”™ è¿”å›ä¸»ç•Œé¢")
    get_tree().change_scene_to_file("res://scenes/start_game.tscn")


## åœºæ™¯é€€å‡ºæ—¶æ¸…ç†æ•°æ®
func _exit_tree() -> void:
    # æ¸…ç†æœ¬è½®æ•°æ®ï¼Œé¿å…å½±å“ä¸‹ä¸€è½®
    GlobalData.reset_session_data()
